# WdLanguage

./: .gitignore  Modify.py  Parser.py  README.md  __init__.wd  setup.py  start.py
App_test/Functions/: __init__.py
App_test/Pages/: __init__.wd
App_test/Pages/test1/: __init__.wd
Arch/: Files_arch.txt  Parser_arch.txt  main.txt  project_arch.txt  tkwd_arch.txt  wdlang_arch.txt
Arch/core/: gramma  lexer  router
Pages/: __init__.wd  test1.wd
Src/: Files.py  Parser.py  tkwd.py  wdlang.py
Test/: test_lexer.py
wdlang/: Cargo.toml  Files.py  Parser.py  __init__.py  pyproject.toml  tkwd.py
wdlang/Tools/: __init__.py
wdlang/Tools/Functions/: Animate.py  Events.py  __init__.py
wdlang/Tools/WDgets/: __init__.py  widget_Treelines.py  widget_pages_rounded.py  widget_rounded.py  widget_svg.py
wdlang/Tools/WDgets/Editor/: editor_text.py
wdlang/benches/: gramma.rs  lexer.rs
wdlang/python/wdlang/: Loader.py  __init__.py  module.py
wdlang/python/wdlang/Tools/WDgets/: __init__.py  widget_BarKeys.py  widget_selector_Box.py  widget_svg.py
wdlang/python/wdlang/Tools/WDgets/Editor/: __init__.py  editor_base.py  editor_gui.py
wdlang/src/: gramma.rs  lexer.rs  lib.rs  router.rs
wdlang/src/gramma/: elements.yml  gtypes.rs  scopes.rs
wdlang/src/lexer/: ltypes.rs  simbolys.rs  tokens.rs
wdlang/tests/: gramma.rs  lexer.rs
